config.json: Added type to ssh communications

--- a/config.json
+++ b/config.json
@@ -45,6 +45,7 @@
         "baud" : "115200"
       },
       "ssh" : {
+        "type" : "ssh",
         "address" : "drotag",
         "user" : "root"
       }
@@ -63,6 +64,7 @@
         "baud" : "115200"
       },
       "ssh" : {
+        "type" : "ssh",
         "address" : "drotag",
         "user" : "root"
       }
