--- a/config.json
+++ b/config.json
@@ -1,19 +1,21 @@
 {
   "camera" : {
     "power" : {
-      "type" : "serial",
-      "baud" : "115200",
-      "reset-prompt" : "\r",
-      "device" : "/dev/ttyRelayBoard",
-      "eof-character" : "\r",
-      "command" : {
-        "on" : {
-          "send" : "CAMERA:ON",
-          "expect" : "Success: CAMERA:ON"
-        },
-        "off" : {
-          "send" : "CAMERA:OFF",
-          "expect" : "Success: CAMERA:OFF"
+      "serial" : {
+        "type" : "serial",
+        "baud" : "115200",
+        "reset-prompt" : "\r",
+        "device" : "/dev/ttyRelayBoard",
+        "eof-character" : "\r",
+        "command" : {
+          "on" : {
+            "send" : "CAMERA:ON",
+            "expect" : "Success: CAMERA:ON"
+          },
+          "off" : {
+            "send" : "CAMERA:OFF",
+            "expect" : "Success: CAMERA:OFF"
+          }
         }
       }
     },
@@ -22,19 +24,21 @@
   },
   "odroid-xu4" : {
     "power" : {
-      "type" : "serial",
-      "baud" : "115200",
-      "reset-prompt" : "\r",
-      "eof-character" : "\r",
-      "device" : "/dev/ttyRelayBoard",
-      "command" : {
-        "on" : {
-          "send" : "BOARD:ON",
-          "expect" : "BOARD:ON"
-        },
-        "off" : {
-          "send" : "BOARD:OFF",
-          "expect" : "BOARD:OFF"
+      "serial" : {
+        "type" : "serial",
+        "baud" : "115200",
+        "reset-prompt" : "\r",
+        "eof-character" : "\r",
+        "device" : "/dev/ttyRelayBoard",
+        "command" : {
+          "on" : {
+            "send" : "BOARD:ON",
+            "expect" : "BOARD:ON"
+          },
+          "off" : {
+            "send" : "BOARD:OFF",
+            "expect" : "BOARD:OFF"
+          }
         }
       }
     },
@@ -53,9 +57,11 @@
   },
   "arietta" : {
     "power" : {
-      "type" : "usb",
-      "usb-address" : "1-2.3",
-      "usb-port" : "4"
+      "usb" : {
+        "type" : "usb",
+        "usb-address" : "1-2.3",
+        "usb-port" : "4"
+      }
     },
     "communications" : {
       "serial" : {
@@ -72,9 +78,11 @@
   },
   "pixhawk" : {
     "power" : {
-      "type" : "usb",
-      "usb-address" : "1-2",
-      "usb-port" : "4"
+      "usb" : {
+        "type" : "usb",
+        "usb-address" : "1-2",
+        "usb-port" : "4"
+      }
     },
     "communications" : {
     }
