Added concept of groups
Now it is possible to have actions over groups
of devices. In this commit we add the drotagx-test
group.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,16 @@
 {
+  "drotagx-test" : {
+    "power" : {
+      "group" : {
+        "type" : "group",
+        "devices" : [
+          "camera",
+          "arietta",
+          "pixhawk"
+        ]
+      }
+    }
+  },
   "camera" : {
     "power" : {
       "serial" : {
