config.json: Added ardupilot-simulator device
This is just a local device not really physical.
This device only turns on/off an ardupilot simulator.
It is integrated into the drotagx-test group as
it is an essential part of the test.

--- a/config.json
+++ b/config.json
@@ -6,10 +6,30 @@
         "devices" : [
           "camera",
           "arietta",
-          "pixhawk"
+          "pixhawk",
+          "ardupilot-simulator"
         ]
       }
     ]
+  },
+  "ardupilot-simulator" : {
+  "power" : [
+    {
+      "type" : "host",
+      "command" : {
+        "on" : [
+          {
+            "execute" : "docker run -d --name ardupilot-simulator --rm --net=host airborne/ardupilot:latest"
+          }
+        ],
+        "off" : [
+          {
+            "execute" : "docker stop -t0 ardupilot-simulator"
+          }
+        ]
+      }
+    }
+  ]
   },
   "camera" : {
     "power" : [
