Whitespace and allow ardupilot docker stop to fail
We need to allow docker stop to fail because a stopping
failure may not mean an error condition. It may just mean that
there was nothing to stop

--- a/config.json
+++ b/config.json
@@ -13,23 +13,23 @@
     ]
   },
   "ardupilot-simulator" : {
-  "power" : [
-    {
-      "type" : "host",
-      "command" : {
-        "on" : [
-          {
-            "execute" : "docker run -d --name ardupilot-simulator --rm --net=host airborne/ardupilot:latest"
-          }
-        ],
-        "off" : [
-          {
-            "execute" : "docker stop -t0 ardupilot-simulator"
-          }
-        ]
+    "power" : [
+      {
+        "type" : "host",
+        "command" : {
+          "on" : [
+            {
+              "execute" : "docker run -d --name ardupilot-simulator --rm --net=host airborne/ardupilot:latest"
+            }
+          ],
+          "off" : [
+            {
+              "execute" : "docker stop -t0 ardupilot-simulator || exit 0"
+            }
+          ]
+        }
       }
-    }
-  ]
+    ]
   },
   "camera" : {
     "power" : [
