config.json Added virt-arm device.
In a strange usage the power is entirely optional.
Let see if this is doable

--- a/config.json
+++ b/config.json
@@ -169,5 +169,13 @@
     ],
     "communications" : [
     ]
+  },
+  "virt-arm" : {
+    "power" : [
+      {
+        "type" : "optional",
+        "id" : "virt-arm-before-power"
+      }
+    ]
   }
 }
