config.json: Add virt-arm-after power optional

--- a/config.json
+++ b/config.json
@@ -175,6 +175,10 @@
       {
         "type" : "optional",
         "id" : "virt-arm-before-power"
+      },
+      {
+        "type" : "optional",
+        "id" : "virt-arm-after-power"
       }
     ]
   }
