config.json: Added support for virt-arm group device
The group device helps pack together all the services
required for the emulator to work as if it was a real
board.

--- a/config.json
+++ b/config.json
@@ -12,6 +12,17 @@
       }
     ]
   },
+  "drotagx-test-virt" : {
+    "power" : [
+      {
+        "type" : "group",
+        "devices" : [
+          "virt-arm",
+          "ardupilot-simulator"
+        ]
+      }
+    ]
+  },
   "socketio-simulator" : {
     "power" : [
       {
