config.json Added drotacloud-test-virt group device
This virtual device sets up all the devices required for the product
drotagcloud in virtualized form

--- a/config.json
+++ b/config.json
@@ -23,6 +23,18 @@
       }
     ]
   },
+  "drotagcloud-test-virt" : {
+    "power" : [
+      {
+        "type" : "group",
+        "devices" : [
+          "ardupilot-simulator",
+          "socketio-simulator",
+          "virt-arm"
+        ]
+      }
+    ]
+  },
   "socketio-simulator" : {
     "power" : [
       {
