config.json: Convert odroid specs to tinyrex specs.
We have stopped using tinyrex in airborne so it does not
make sense to have this for the drotagcloud.
Also added the ids for *before and *after power injections.

--- a/config.json
+++ b/config.json
@@ -115,10 +115,11 @@
     "communications" : {
     }
   },
-  "odroid-xu4" : {
+  "imx6-tinyrexpro" : {
     "power" : [
       {
-        "type" : "optional"
+        "type" : "optional",
+        "id" : "imx6-tinyrexpro-before-power"
       },
       {
         "type" : "serial",
@@ -157,7 +158,7 @@
       },
       {
         "type" : "optional",
-        "id" : "odroid-after-power"
+        "id" : "imx6-tinyrexpro-after-power"
       }
     ],
     "communications" : [
