config.json Added drotagcloud target configuration.
This is a group target composed of a camera ardupilot-simulator and
a tinyrex pro board.

--- a/config.json
+++ b/config.json
@@ -29,8 +29,19 @@
         "type" : "group",
         "devices" : [
           "ardupilot-simulator",
-          "socketio-simulator",
           "virt-arm"
+        ]
+      }
+    ]
+  },
+  "drotagcloud-test" : {
+    "power" : [
+      {
+        "type" : "group",
+        "devices" : [
+          "camera",
+          "ardupilot-simulator",
+          "imx6-tinyrexpro"
         ]
       }
     ]
