config.json: Block for 4 seconds after harware bringup.
This will probably eat a bit of the next application early boot
time, but will fix a crappy problem where the usb network interface
is briefly available, configured and then restarted. This would lead
to an unconfigured interface after this restart and the boot process
would hang as we would not have any network communication with the
arietta.

--- a/config.json
+++ b/config.json
@@ -197,6 +197,21 @@
         "usb-port" : "4"
       },
       {
+        "type": "host",
+        "command": {
+          "on": [
+            {
+              "execute": "sleep 4 # Required because the usb of the arietta needs to be stabilized."
+            }
+          ],
+          "off": [
+            {
+              "execute": "true"
+            }
+          ]
+        }
+      },
+      {
         "type" : "optional",
         "id" : "arietta-after-power"
       }
